poke/testsuite/poke.pkl/struct-method-diag-2.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    method foo = int: { return 10; }
    int i if
      foo != 10; /* { dg-error "method" } */
  };
